General fixes to some widgets
Removed dark from som widget tables

Fixed horizontal scroll for chrome in tablestat
widgets and monfeat widget, fixes #8712

Fixed tac_monfeat headers because they were bad
added title to that says what happens on click,
fixes #8543, fixes #7914

--- a/application/views/css/base-sass/common.sass
+++ b/application/views/css/base-sass/common.sass
@@ -200,8 +200,8 @@ table
 		z-index: 0
 
 	.icon
-		width: 40px
-		min-width: 40px
+		width: 32px
+		min-width: 32px
 		text-align: center
 
 	.comments
