--- a/application/views/css/base-sass/widget.sass
+++ b/application/views/css/base-sass/widget.sass
@@ -29,7 +29,7 @@
 
 	select
 		width: auto !important
-		
+
 	.refresh_slider
 		margin: 0 16px
 
@@ -39,11 +39,11 @@
 
 	div
 		padding: 0 5px 0 16px
-	
+
 .widget-editbox-field
 	width: 68%
 	display: inline-block
-	
+
 	textarea
 		width: 100%
 
@@ -110,3 +110,10 @@
 	margin: 0
 	padding: 0
 	float: left
+
+.tablestat-widget
+	width: 99%
+	margin: 0 auto
+	border: none
+	td:last-child
+		border-right: none
